lib/src/compiler/tests/testdata/errors/108.out
error[E029]: invalid escape sequence
 --> line:2:15
  |
2 |   condition: "\xZZ" == "\xZZ"
  |               ^^ expecting two hex digits after `\x`